Game is finished

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,10 @@
     "files.associations": {
         "*.embeddedhtml": "html",
         "enginecore.h": "c",
-        "level.h": "c"
+        "level.h": "c",
+        "mainmenulevel.h": "c",
+        "bitset": "c",
+        "__node_handle": "c",
+        "typeinfo": "c"
     }
 }
